--- a/Views/Access/Register.cshtml
+++ b/Views/Access/Register.cshtml
@@ -8,7 +8,7 @@
                 Registrate
             </div>
             <div class="card-body">
-                <form action="">
+                <form asp-controller="Access" asp-action="Register" method="post">
                     <input class="form-control mb-3" type="text" placeholder="Nombre Completo" required asp-for="FullName">
                     <input class="form-control mb-3" type="text" placeholder="Correo Electronico" required asp-for="Email">
                     <input class="form-control mb-3" type="text" placeholder="Constraseña" required asp-for="Password">
@@ -18,6 +18,12 @@
                         <p class="text-center">Ya tienes una cuenta? <a href="login.html">Inicia Sesión</a></p>
                     </div>
                 </form>
+                @if(ViewData["Mensaje"] != null)
+                {
+                    <div class="alert alert-danger" role="alert">
+                        @ViewData["Mensaje"]
+                    </div>
+                }
 
             </div>
         </div>
