--- a/Views/Access/Register.cshtml
+++ b/Views/Access/Register.cshtml
@@ -1,31 +1,52 @@
 @model LoginSistem.ViewModels.UserVM;
+@{
+    Layout = null;
+}
+<html>
 
+<head>
+    <title>Registro</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+</head>
 
-<div class="row mt-5 justify-content-center">
-    <div class="col-md-4">
-        <div class="card">
-            <div class="card-header">
-                Registrate
-            </div>
-            <div class="card-body">
-                <form asp-controller="Access" asp-action="Register" method="post">
-                    <input class="form-control mb-3" type="text" placeholder="Nombre Completo" required asp-for="FullName">
-                    <input class="form-control mb-3" type="text" placeholder="Correo Electronico" required asp-for="Email">
-                    <input class="form-control mb-3" type="text" placeholder="Constraseña" required asp-for="Password">
-                    <input class="form-control mb-3" type="text" placeholder="Confirmar Contraseña" required asp-for="ConfirmPassword">
-                    <div class="d-grid gap-2 mb-3">
-                        <button class="btn btn-primary" type="submit">Registrarse</button>
-                        <p class="text-center">Ya tienes una cuenta? <a href="login.html">Inicia Sesión</a></p>
-                    </div>
-                </form>
-                @if(ViewData["Mensaje"] != null)
-                {
-                    <div class="alert alert-danger" role="alert">
-                        @ViewData["Mensaje"]
-                    </div>
-                }
+<body>
+    <div class="row mt-5 justify-content-center">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-header">
+                    Registrate
+                </div>
+                <div class="card-body">
+                    <form asp-controller="Access" asp-action="Register" method="post">
+                        <input class="form-control mb-3" type="text" placeholder="Nombre Completo" required
+                            asp-for="FullName">
+                        <input class="form-control mb-3" type="email" placeholder="Correo Electronico" required
+                            asp-for="Email">
+                        <input class="form-control mb-3" type="password" placeholder="Contraseña" required
+                            asp-for="Password">
+                        <input class="form-control mb-3" type="password" placeholder="Confirmar Contraseña" required
+                            asp-for="ConfirmPassword">
+                        <div class="d-grid gap-2 mb-3">
+                            <button class="btn btn-primary" type="submit">Registrarse</button>
+                            <p class="text-center">¿Ya tienes una cuenta? <a asp-controller="Access"
+                                    asp-action="Login">Inicia Sesión</a></p>
+                        </div>
+                    </form>
+                    @if (ViewData["Mensaje"] != null)
+                    {
+                        <div class="alert alert-danger" role="alert">
+                            @ViewData["Mensaje"]
+                        </div>
+                    }
 
+                </div>
             </div>
         </div>
     </div>
-</div>
+    @*/Scripts de bootstrap*@
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+</body>
+
+</html>
