--- a/Views/Access/Register.cshtml
+++ b/Views/Access/Register.cshtml
@@ -13,7 +13,7 @@
     <div class="row mt-5 justify-content-center">
         <div class="col-md-4">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header text-center">
                     Registrate
                 </div>
                 <div class="card-body">
@@ -27,7 +27,7 @@
                         <input class="form-control mb-3" type="password" placeholder="Confirmar Contraseña" required
                             asp-for="ConfirmPassword">
                         <div class="d-grid gap-2 mb-3">
-                            <button class="btn btn-primary" type="submit">Registrarse</button>
+                            <button class="btn btn-primary" type="submit">Registrarse</button><br>
                             <p class="text-center">¿Ya tienes una cuenta? <a asp-controller="Access"
                                     asp-action="Login">Inicia Sesión</a></p>
                         </div>
