fix: añado una mejor presentacion de index Home

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,27 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="container text-center mt-5">
+    <h1 class="display-4">Bienvenidos a mi Plataforma</h1>
+    <p class="lead">Soy Luis Alejandro Londoño Valle</p>
+
+    <div class="d-flex">
+        <div class="mt-4">
+            <img src="~/img/Alejandro.png" alt="Foto de Luis Alejandro Londoño Valle"
+                class="" style="width: 400px; height: 400px; object-fit: cover;">
+        </div>
+
+        <div class="mt-4">
+            <h2 class="font-weight-bold">Sobre Mí</h2>
+            <p class="text-justify">Soy un joven apasionado por el desarrollo de software, con 18 años de experiencia de
+                vida y un fuerte interés en el entorno de C# y .NET. Desde muy temprana edad, he encontrado en la
+                programación una forma de expresar mi creatividad y solucionar problemas. Mi dedicación y amor por el
+                código
+                me han llevado a aprender y perfeccionar mis habilidades, con la meta de convertirme en un desarrollador
+                de
+                software de clase mundial. Estoy comprometido con el crecimiento continuo y siempre en busca de nuevos
+                desafíos que me permitan mejorar y aprender.</p>
+        </div>
+    </div>
 </div>
