fix. se mejora home

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,13 +7,13 @@
     <h1 class="display-4">Bienvenidos a mi Plataforma</h1>
     <p class="lead">Soy Luis Alejandro Londoño Valle</p>
 
-    <div class="d-flex">
-        <div class="mt-4">
-            <img src="~/img/Alejandro.png" alt="Foto de Luis Alejandro Londoño Valle"
-                class="" style="width: 400px; height: 400px; object-fit: cover;">
+    <div class="d-flex flex-column flex-md-row align-items-center">
+        <div class="mt-4" style="width: 100%; max-width: 400px; height: 590px;">
+            <img src="~/img/Alejandro.png" alt="Foto de Luis Alejandro Londoño Valle" class="img-fluid rounded"
+                style="width: 100%; height: 100%; object-fit: cover; object-position: top;">
         </div>
 
-        <div class="mt-4">
+        <div class="mt-4 ml-md-4">
             <h2 class="font-weight-bold">Sobre Mí</h2>
             <p class="text-justify">Soy un joven apasionado por el desarrollo de software, con 18 años de experiencia de
                 vida y un fuerte interés en el entorno de C# y .NET. Desde muy temprana edad, he encontrado en la
@@ -22,7 +22,17 @@
                 me han llevado a aprender y perfeccionar mis habilidades, con la meta de convertirme en un desarrollador
                 de
                 software de clase mundial. Estoy comprometido con el crecimiento continuo y siempre en busca de nuevos
-                desafíos que me permitan mejorar y aprender.</p>
+                desafíos que me permitan mejorar y aprender.</p><br>
+            <h2 class="font-weight-bold">Contacto</h2>
+            <div class="d-flex">
+                <i class="bi bi-github"><a href="https://github.com/AlejandroLondonoValle" target="_blank"
+                        rel="noopener noreferrer"></a></i>
+                <i class="bi bi-envelope-at-fill"><a href="mailto:londonovalleluisalejandro@gmail.com" target="_blank"
+                        rel="noopener noreferrer"></a></i>
+                <i class="bi bi-linkedin"><a href="https://www.linkedin.com/in/luís-alejandro-londoño-valle"
+                        target="_blank" rel="noopener noreferrer"></a></i>
+            </div>
         </div>
     </div>
+
 </div>
