--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,13 +24,13 @@
                 software de clase mundial. Estoy comprometido con el crecimiento continuo y siempre en busca de nuevos
                 desafíos que me permitan mejorar y aprender.</p><br>
             <h2 class="font-weight-bold">Contacto</h2>
-            <div class="d-flex">
-                <i class="bi bi-github"><a href="https://github.com/AlejandroLondonoValle" target="_blank"
-                        rel="noopener noreferrer"></a></i>
-                <i class="bi bi-envelope-at-fill"><a href="mailto:londonovalleluisalejandro@gmail.com" target="_blank"
-                        rel="noopener noreferrer"></a></i>
-                <i class="bi bi-linkedin"><a href="https://www.linkedin.com/in/luís-alejandro-londoño-valle"
-                        target="_blank" rel="noopener noreferrer"></a></i>
+            <div class="d-flex align-items-center gap-3">
+                <a href="https://github.com/AlejandroLondonoValle" target="_blank"
+                        rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                <a href="mailto:londonovalleluisalejandro@gmail.com" target="_blank"
+                        rel="noopener noreferrer"><i class="bi bi-envelope-at-fill"></i></a>
+                <a href="https://www.linkedin.com/in/luís-alejandro-londoño-valle"
+                        target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
     </div>
