fix: enlazo mis cuentas de contacto en el home

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,14 +23,22 @@
                 de
                 software de clase mundial. Estoy comprometido con el crecimiento continuo y siempre en busca de nuevos
                 desafíos que me permitan mejorar y aprender.</p><br>
-            <h2 class="font-weight-bold">Contacto</h2>
-            <div class="d-flex align-items-center gap-3">
-                <a href="https://github.com/AlejandroLondonoValle" target="_blank"
-                        rel="noopener noreferrer"><i class="bi bi-github"></i></a>
-                <a href="mailto:londonovalleluisalejandro@gmail.com" target="_blank"
-                        rel="noopener noreferrer"><i class="bi bi-envelope-at-fill"></i></a>
-                <a href="https://www.linkedin.com/in/luís-alejandro-londoño-valle"
-                        target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+            <h2 class="font-weight-bold text-center">Contacto</h2>
+            <div class="d-flex justify-content-center align-items-center gap-3 mt-3">
+                <a href="https://github.com/AlejandroLondonoValle" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github fs-2"></i>
+                </a>
+                <a href="mailto:londonovalleluisalejandro@gmail.com">
+                    <i class="bi bi-envelope-at-fill fs-2"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/luís-alejandro-londoño-valle" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="bi bi-linkedin fs-2"></i>
+                </a>
+                <a href="https://www.instagram.com/alejandro_londono206/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-instagram fs-2"></i>
+                </a>
+
             </div>
         </div>
     </div>
